--- a/search.html
+++ b/search.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Search Your Town</title>
+  <meta charset="utf-8">
+  <title>Search Town and View Map</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Roboto', sans-serif;
+      display: flex;
+      flex-direction: column;
     }
-    #townInput {
+    .search-panel {
+      background: #f4f4f4;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      z-index: 10;
+    }
+    .search-panel input {
       padding: 8px;
       font-size: 16px;
-      width: 220px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      width: 250px;
     }
-    #searchButton {
-      padding: 8px 14px;
+    .search-panel button {
+      padding: 8px 16px;
       font-size: 16px;
+      font-weight: bold;
       background-color: #005e95;
       color: white;
       border: none;
@@ -23,40 +40,35 @@
       cursor: pointer;
     }
     iframe {
-      margin-top: 20px;
+      flex-grow: 1;
       width: 100%;
-      height: 600px;
-      border: 1px solid #ccc;
+      border: none;
     }
   </style>
 </head>
 <body>
 
-  <h2>Search Your Town</h2>
+  <div class="search-panel">
+    <input type="text" id="townSearch" placeholder="Enter Town Name" />
+    <button onclick="sendSearch()">Search</button>
+    <button onclick="sendClear()">Clear</button>
+  </div>
 
-  <input type="text" id="townInput" placeholder="Enter town name" />
-  <button id="searchButton">Search</button>
-
-  <iframe
-    id="mapboxFrame"
-    src="https://20ahoes.github.io/MBTAFindYourCommunity/map_with_button.html?force=1"
-  ></iframe>
+  <iframe id="mapFrame" src="map_with_button.html" title="Map View"></iframe>
 
   <script>
-    document.getElementById("searchButton").addEventListener("click", function () {
-      const town = document.getElementById("townInput").value.trim();
-      const iframe = document.getElementById("mapboxFrame");
+    function sendSearch() {
+      const name = document.getElementById('townSearch').value.trim();
+      const mapFrame = document.getElementById('mapFrame');
+      mapFrame.contentWindow.postMessage({ type: 'search-town', name }, '*');
+      console.log("🔎 Sent search-town:", name);
+    }
 
-      if (town && iframe && iframe.contentWindow) {
-        console.log("📤 Sending search-town:", town);
-        iframe.contentWindow.postMessage({
-          type: "search-town",
-          name: town
-        }, "*");
-      } else {
-        console.warn("❌ Missing input or iframe.");
-      }
-    });
+    function sendClear() {
+      const mapFrame = document.getElementById('mapFrame');
+      mapFrame.contentWindow.postMessage({ type: 'clear-town' }, '*');
+      console.log("🧹 Sent clear-town");
+    }
   </script>
 
 </body>
