--- a/map_with_button.html
+++ b/map_with_button.html
@@ -36,7 +36,7 @@
     #toggleMapboxLayer { margin: 0 5px; }
     #homeButton {
       position: absolute; top: 10px; left: 10px; z-index: 2;
-      padding: 10px; display: flex; align-items: center;
+      display: flex; align-items: center;
     }
     .material-icons { font-size: 24px; }
   </style>
@@ -47,7 +47,7 @@
     <span class="material-icons">home</span>
   </button>
 
-  <!-- Toggle Layer Button -->
+  <!-- Toggle Base Layer Button -->
   <div class="top-bar">
     <button id="toggleMapboxLayer">Toggle Municipalities Layer</button>
   </div>
@@ -61,11 +61,11 @@
     const defaultCenter = [-71.245, 42.254];
     const defaultZoom = 8.0;
     const layerId = 'municipalitiesbycommunitytype-c8ks3h copy';
-    const sourceLayer = 'MunicipalitiesByCommunityType-C8ks3h';
+    const sourceLayer = 'MunicipalitiesByCommunityType-c8ks3h';
     const nameField = 'Municipali';
     const bounds = [[-72.5, 41.5], [-69.5, 43.0]];
 
-    // Initialize map
+    // initialize map
     const map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
@@ -76,30 +76,25 @@
       maxBounds: bounds
     });
 
-    // Helper: compute centroid of a Polygon or MultiPolygon
-    function getCentroid(coords, type) {
-      let sumX=0, sumY=0, count=0;
-      const pts = (type==='MultiPolygon')
-        ? coords.flat(2)
-        : coords[0];
-      pts.forEach(([x,y]) => { sumX+=x; sumY+=y; count++; });
-      return [sumX/count, sumY/count];
-    }
-
-    // Highlight + Zoom action
+    // compute bounding box and highlight
     function highlightAndZoom(feature) {
       const geom = feature.geometry;
-      const center = getCentroid(geom.coordinates, geom.type);
-      map.flyTo({ center, zoom: defaultZoom+1, speed: 1.2, essential: true });
+      // flatten coords for Polygon or MultiPolygon
+      const pts = (geom.type === 'MultiPolygon')
+        ? geom.coordinates.flat(2)
+        : geom.coordinates[0];
+      const b = new mapboxgl.LngLatBounds();
+      pts.forEach(p => b.extend(p));
+      map.fitBounds(b, { padding: 40, duration: 1000 });
 
-      // Show highlight via GeoJSON source
+      // update highlight source
       map.getSource('highlight-town').setData({
         type: 'FeatureCollection',
         features: [feature.toJSON()]
       });
     }
 
-    // Clear highlight
+    // clear highlight
     function clearSelection() {
       map.getSource('highlight-town').setData({
         type: 'FeatureCollection',
@@ -108,7 +103,7 @@
     }
 
     map.on('load', () => {
-      // 1) Add a GeoJSON source + layers for highlight
+      // add highlight source & layers
       map.addSource('highlight-town', {
         type: 'geojson',
         data: { type: 'FeatureCollection', features: [] }
@@ -126,30 +121,30 @@
         paint: { 'line-color': '#FF9800', 'line-width': 2 }
       });
 
-      // 2) Toggle municipalities layer
+      // toggle municipalities layer
       document.getElementById('toggleMapboxLayer').addEventListener('click', () => {
         const vis = map.getLayoutProperty(layerId, 'visibility') || 'visible';
         map.setLayoutProperty(layerId, 'visibility', vis === 'none' ? 'visible' : 'none');
       });
 
-      // 3) Home button reset
+      // home button
       document.getElementById('homeButton').addEventListener('click', () => {
         map.flyTo({ center: defaultCenter, zoom: defaultZoom, speed: 1.2, essential: true });
       });
 
-      // 4) Click-on-map selects town
+      // click-to-select
       map.on('click', layerId, e => {
         if (e.features.length) highlightAndZoom(e.features[0]);
       });
     });
 
-    // Listen for search/clear from parent
+    // listen for search/clear from parent
     window.addEventListener('message', e => {
       const msg = e.data || {};
       if (msg.type === 'search-town') {
-        const search = (msg.name||'').trim().toLowerCase();
+        const term = (msg.name || '').trim().toLowerCase();
         const feats = map.querySourceFeatures('composite', { sourceLayer });
-        const match = feats.find(f => f.properties[nameField]?.toLowerCase() === search);
+        const match = feats.find(f => f.properties[nameField]?.toLowerCase() === term);
         if (match) highlightAndZoom(match);
       }
       else if (msg.type === 'clear-town') {
