--- a/search.html
+++ b/search.html
@@ -4,31 +4,36 @@
   <meta charset="UTF-8" />
   <title>Search Town and View Map</title>
   <style>
-    body, html {
+    /* 1) Make the page fill the viewport */
+    html, body {
+      height: 100vh;
       margin: 0;
       padding: 0;
-      height: 100%;
       font-family: 'Roboto', sans-serif;
       display: flex;
       flex-direction: column;
     }
+
+    /* 2) Top search panel is exactly 60px tall */
     .search-panel {
+      height: 60px;
       background: #f4f4f4;
-      padding: 10px 20px;
+      padding: 0 20px;
       display: flex;
-      justify-content: center;
       align-items: center;
       gap: 10px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       z-index: 10;
     }
+
     .search-panel input {
+      flex: 1;
       padding: 8px;
       font-size: 16px;
       border-radius: 4px;
       border: 1px solid #ccc;
-      width: 250px;
     }
+
     .search-panel button {
       padding: 8px 16px;
       font-size: 16px;
@@ -42,9 +47,12 @@
     .search-panel button:hover {
       background-color: #003f63;
     }
+
+    /* 3) The iframe takes the rest of the space */
     iframe {
-      flex-grow: 1;
+      flex: 1 1 auto;
       width: 100%;
+      height: calc(100% - 60px);
       border: none;
     }
   </style>
